# fsds-bwai-recs

./: .env.example  .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  docker-compose-mongo-local.yaml  docker-compose.deploy.yaml  docker-compose.yaml  main.py  pyproject.toml  render.yaml  requirements.txt  vercel.json
data/interim/: item_clusters.csv
data/models/: mongo_fp_growth_metadata.pkl
data/processed/: item_metadata.csv  synthetic_interactions.csv
notebooks/: 001_eda.ipynb  002_clustering.ipynb  003_synthetic_data_v1.ipynb
src/: base.py  constants.py  loaders.py
src/api/: dto.py  main.py
src/application/: calculate_popular_items.py  fp_growth_recommendations.py  fp_growth_training.py  mongo_fpgrowth.py  mongo_popular_items.py
src/entities/: dataset.py  recs.py
src/recommendation/: popular_recs.py
src/recommendation/fp_growth_recs/: training.py
src/scripts/: compute_item_metadata.py  convert_dataset_to_csv.py
